add arrows for find easily
add arrows for find easily

--- a/css/todayPrice.css
+++ b/css/todayPrice.css
@@ -185,6 +185,10 @@ body {
     margin: 0;
 }
 
+.fa-arrow-up, .fa-arrow-down {
+    color: #4CAF50;
+}
+
 /* quick action cards */
 .quick {
     display: flex;
