--- a/css/manageProducts.css
+++ b/css/manageProducts.css
@@ -165,7 +165,21 @@ body {
 
 #hiddenForm textarea {
     resize: none;
+    font-family: poppins;
 }
+
+#formContainer input:focus, #hiddenForm textarea:focus {
+    outline: none;
+    border-color: #4CAF50;
+    background-color: #4caf4f51;
+}
+
+#price::-webkit-inner-spin-button,
+#price::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 
 #submitBtn {
     border: none;
@@ -248,6 +262,22 @@ body {
 
 .tAction {
     width: 80px;
+}
+
+.fa-edit {
+    color: blue
+}
+
+.fa-edit:hover {
+    scale: 1.2;
+}
+
+.fa-trash {
+    color: red;
+}
+
+.fa-trash:hover {
+    scale: 1.2;
 }
 
 /* quick action cards */
