--- a/css/manageOrders.css
+++ b/css/manageOrders.css
@@ -171,6 +171,15 @@ body {
     background-color: transparent;
 }
 
+.actionBtn {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    padding: 100%;
+    margin-top: 20%;
+    border: none !important;
+}
+
 .fa-edit {
     color: #4CAF50;
 }
