--- a/css/manageOrders.css
+++ b/css/manageOrders.css
@@ -165,6 +165,28 @@ body {
     max-width: 250px;
 }
 
+.completeStatus {
+    color: #4CAF50;
+    font-weight: bold;
+}
+
+.pendingStatus {
+    color: gray;
+    font-weight: bold;
+}
+
+.productID {
+    font-weight: bold;
+}
+
+.tQuantity {
+    color: blue;
+}
+
+.totalPrice {
+    font-weight: bold;
+}
+
 /* action button styles */
 .actionBtns {
     border: none !important;
@@ -182,16 +204,20 @@ body {
 
 .fa-edit {
     color: #4CAF50;
+    cursor: pointer;
 }
 .fa-edit:hover {
     color: blue;
+    scale: 1.2;
 }
 
 .fa-trash {
     color: red;
+    cursor: pointer;
 }
 .fa-trash:hover {
     color: #8B4513;
+    scale: 1.2;
 }
 
 /* quick action cards */
