--- a/css/faq.css
+++ b/css/faq.css
@@ -10,7 +10,7 @@ body {
 
 .faq-container {
     max-width: 1200px;
-    margin: 40px auto;
+    margin: -20px auto 40px;
     padding: 20px;
     text-align: center;
 }
