--- a/css/privacy.css
+++ b/css/privacy.css
@@ -30,7 +30,11 @@ body {
 .policy-container p {
   margin-bottom: 20px;
   line-height: 1.6;
-  color: #333;
+  color: #3E8E41;
+}
+
+#privacyMainPara {
+  color:#333;
 }
 
 .policy-section {
