--- a/css/product-details.css
+++ b/css/product-details.css
@@ -29,13 +29,16 @@ body {
 
 .product-image img {
     max-width: 450px;
+    max-height: 450px;
     width: 100%;
     height: auto;
     object-fit: cover;
-    transition: transform 0.5s;
+    scale: 1.05;
+    transition: margin-right 0.5s ease, transform 0.5s;
 }
 
 .product-image img:hover {
+    margin-right: 20px;
     transform: scale(1.1);
 }
 
