--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,7 @@ body, a {
     transition: 0.3s ease-in-out;
 }
 
+/* Info cards */
 .info {
     margin-left: 25px;
     margin-right: 25px;
@@ -92,6 +93,7 @@ body, a {
 .card {
     flex: 1;
     text-align: center;
+    background-color: #f9f9f9;
     padding: 30px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
@@ -107,6 +109,14 @@ body, a {
 .card:hover {
     transform: scale(1.03);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.info-cards h4 {
+    color: #4CAF50 !important;
+}
+
+.info-cards p {
+    color: #666 !important;
 }
 
 /* Staff Section */
@@ -166,6 +176,54 @@ body, a {
 }
 
 .staff-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+/* Achievements Section */
+.achievements {
+    margin: 50px 25px;
+    text-align: center;
+}
+
+.achievements h2, .achievements p {
+    margin: 10px 0;
+    color: #333;
+}
+
+.achievement-cards {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.achievement-card {
+    flex: 1;
+    text-align: center;
+    padding: 30px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    transition: transform 0.5s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.achievements .achievementsP {
+    color: #8B4513;
+}
+
+.achievement-card h3 {
+    font-size: 2rem;
+    color: #4CAF50;
+    margin-bottom: 10px;
+}
+
+.achievement-card p {
+    color: #666;
+    font-size: 1rem;
+}
+
+.achievement-card:hover {
     transform: scale(1.05);
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
 }
