--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@ body, a {
     padding: 30px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
-    transition: transform 1.5s ease-in-out;
+    transition: transform 1.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
 .card img {
